# git-sim

./: .codespellrc  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
.github/: FUNDING.yml
git_sim/: __main__.py  add.py  animations.py  branch.py  checkout.py  cherrypick.py  clean.py  clone.py  commands.py  commit.py  enums.py  fetch.py  git_sim.py  git_sim_add.py  git_sim_base_command.py  git_sim_branch.py  git_sim_cherrypick.py  git_sim_commit.py  git_sim_log.py  git_sim_merge.py  git_sim_rebase.py  git_sim_reset.py  git_sim_restore.py  git_sim_revert.py  git_sim_stash.py  git_sim_status.py  git_sim_tag.py  log.py  logo.py  merge.py  mv.py  pull.py  push.py  rebase.py  reset.py  restore.py  revert.py  rm.py  settings.py  stash.py  (+3 more)
src/git_sim/: __main__.py  add.py  animations.py  branch.py  checkout.py  cherrypick.py  clean.py  clone.py  commands.py  commit.py  config.py  enums.py  fetch.py  git_sim_base_command.py  init.py  log.py  merge.py  mv.py  pull.py  push.py  rebase.py  remote.py  reset.py  restore.py  revert.py  rm.py  settings.py  stash.py  status.py  switch.py  tag.py
tests/: README.md
tests/e2e_tests/: conftest.py  test_core_commands.py  utils.py
tests/e2e_tests/sample_repo/: .gitignore
tests/e2e_tests/sample_repo/.git_not_a_submodule/: config  index
tests/e2e_tests/sample_repo/.git_not_a_submodule/logs/: HEAD
tests/e2e_tests/sample_repo/.git_not_a_submodule/logs/refs/heads/: branch1  main  (+2 more)
tests/e2e_tests/sample_repo/.git_not_a_submodule/refs/heads/: branch1  branch2  branch3  main
